src/test/c/reject/10-repeated-attr-stad.ms
stadium Lusail Stadium {
    Capacity: 88966;
    Capacity: 12321;
    Photo: http://stadiumdb.com/pictures/stadiums/qat/lusail_stadium/lusail_stadium13m.jpg;
}